OO-8195: partial implementation of table pending members in curriculum